Refactor empty lists